--- a/package.yaml
+++ b/package.yaml
@@ -1,10 +1,10 @@
 name:                PlayYouAHaskell
 version:             0.1.0.0
-github:              https://github.com/andreasMazur/PlayYouAHaskell
+github:              andreasMazur/PlayYouAHaskell
 license:             MIT
 author:              Andreas Mazur
 maintainer:          Andreas Mazur
-copyright:           2021 Andreas Mazur
+copyright:           2023 Andreas Mazur
 
 extra-source-files:
 - README.md
